# amadb

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  install.sh  setup.py.in
amadb/: __init__.py.in  manager.py  server.py
amadb/dbmanager/: __init__.py  base_manager.py  hash_manager.py  job_manager.py  workspace_manager.py
amadb/proto/: README
amadb/utils/: misc.py
data/agents/: ubuntu20.04-python3.8-mongodb5.dockerfile  ubuntu20.04-python3.8.dockerfile
tests/: client.py  test_hashdbmanager.py  test_workspacedbmanager.py
